feat(product-variation): add upload images
