# src/validations/product.seller.validation.ts
@@ -6,6 +6,8 @@ export const createProduct = {
     description: Joi.string().required(),
     category: Joi.string().required(),
   }),
+
+  file: Joi.any().required(),
 };
 
 export const createProductVariants = {
@@ -31,6 +33,8 @@ export const createProductVariants = {
     ),
     productId: Joi.number().required(),
   }),
+
+  file: Joi.any().required(),
 };
 export const createProductVariant = {
   params: Joi.object().keys({
@@ -40,15 +44,17 @@ export const createProductVariant = {
     name: Joi.string().required(),
     price: Joi.number().required(),
     stock: Joi.number().required(),
-    image: Joi.string().required(),
 
-    variationOptions: Joi.array()
-      .items(
-        Joi.object().keys({
-          name: Joi.string().required(),
-          value: Joi.string().required(),
-        }),
-      )
-      .required(),
+    // stringified array of objects
+    variationOptions: Joi.string().required(),
   }),
 };
+
+export const variationOptions = Joi.array()
+  .items(
+    Joi.object().keys({
+      name: Joi.string().required(),
+      value: Joi.string().required(),
+    }),
+  )
+  .required();
